--- a/index.html
+++ b/index.html
@@ -1,9 +1,156 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Отзывы Арсений Маркелов</title>
+</head>
 <body>
-  <h1>Arsenii Markelov</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <section id="reviews">
+    <div id="columns">
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/julia.webp" alt="">
+            </figure>
+            <h3 class="title">Юлия Лебедева</h3>
+          </div>
+          <div class="text">
+            <p>Арсений хороший преподаватель, ответственно подходит к своей работе. Досконально объясняет материал, на уроках интересно. Очень советую!</p>
+            <h4 class="date">19 октября 2021</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/anna.webp" alt="">
+            </figure>
+            <h3 class="title">Анна Фёдоровна</h3>
+          </div>
+          <div class="text">
+            <p>Уже год занимаемся вместе и считаем, что нам очень повезло. Мягкий, но требовательный, Арсений нашёл подход к ребёнку и умеет заинтересовать. Учитывает пожелания родителей, с нами идёт по программе и дополняет её разносторонним дедактическим материалом. Видно, что занятия тщательно спланированы, успешно подготовились с ним к введению этого предмета в школе. Хороший преподаватель.</p>
+            <h4 class="date">6 марта 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/varvara.webp" alt="">
+            </figure>
+            <h3 class="title">Белоусова Варвара</h3>
+          </div>
+          <div class="text">
+            <p>Чудесный парень и очень грамотный специалист! Ребёнок в восторге от занятий))) Однозначно рекомендую Арсения)))</p>
+            <h4 class="date">3 апреля 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/tatyana.webp" alt="">
+            </figure>
+            <h3 class="title">Татьяна Прохорова</h3>
+          </div>
+          <div class="text">
+            <p>Большое спасибо Арсению за подготовку, за поддержку, за его компетентность и гиперответственность. У сына оценка 5 за ОГЭ по английскому и русскому языку. Такой короткий срок, всего четыре месяца, а какие отличные результаты. Буду рекомендовать всем знакомым!</p>
+            <h4 class="date">15 мая 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/yaroslav.webp" alt="">
+            </figure>
+            <h3 class="title">Ярослав Счастливый</h3>
+          </div>
+          <div class="text">
+            <p>Обратился по рекомендации друга. Получил именно то что хотел — корректировку грамматики. Несмотря на мой многолетний опыт общения оставались пробелы! Благодарен Арсению и рекомендую его в качестве достойного преподавателя!</p>
+            <h4 class="date">26 июня 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/diana.webp" alt="">
+            </figure>
+            <h3 class="title">Диана Фомичёва</h3>
+          </div>
+          <div class="text">
+            <p>Всегда думала, что английский — это сложно и мне просто не дано его выучить. Каждый раз убеждалась, когда занималась то с одним репетитором, то с другим, потому что их объяснения были мне не понятны, так и думала, пока не встретила Арсения. Занимаемся с апреля месяца, сказать, что я довольна, значит — ничего не сказать, настолько хорошо объясняет, правильно подбирает материал, да и просто он замечательный человек. Если Вы думаете, что английский — это дремучий лес и Вам никогда не разобраться в нём, то вы ошибаетесь, просто нужно обратиться к Арсению!)</p>
+            <h4 class="date">29 июля 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/ksenia.webp" alt="">
+            </figure>
+            <h3 class="title">Ксения Путинцева</h3>
+          </div>
+          <div class="text">
+            <p>Дочка занимается английским языком второй год, начала в восьмом классе. Занимается с удовольствием. Польза видна невооружённым взглядом. Продолжаем и вам советуем!!!</p>
+            <h4 class="date">11 сентября 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/nadezhda.webp" alt="">
+            </figure>
+            <h3 class="title">Надежда Томская</h3>
+          </div>
+          <div class="text">
+            <p>Арсений занимается с моим сыном более двух месяцев. Основной акцент в уроках идёт на грамматику, что было оговорено предварительно. Моя личная благодарность Арсению за терпение и въедливость на занятиях. Мой сын не отличается внимательностью и усердием, но вместе они упорно пробираются сквозь тернии языка. В школе уверенная пятерка. Но главное для меня мнение ребенка, которому нравятся занятия с Арсением, формат онлайн уроков ему комфортен. Мне же нравится чёткость и ясность в решении текущих вопросов, а также пунктуальность Арсения.</p>
+            <h4 class="date">20 октября 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/svetlana.webp" alt="">
+            </figure>
+            <h3 class="title">Светлана Куликова</h3>
+          </div>
+          <div class="text">
+            <p>Уроки английского проходят замечательно. Арсений Владимирович профессионал своего дела. Сыну нравится формат уроков, всё понятно, комфортно и интересно. Продолжаем заниматься уже пять месяцев.</p>
+            <h4 class="date">23 октября 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/elena.webp" alt="">
+            </figure>
+            <h3 class="title">Елена Шевченко</h3>
+          </div>
+          <div class="text">
+            <p>Хочется сказать спасибо Арсению, очень грамотный и квалифицированный специалист. За год занятий с сыном на отлично подтянул английский язык. При этом имеет индивидуальный подход к ребёнку, в результате чего способен заинтересовать его. Рекомендую всем, кто хочет повысить уровень знаний английского языка!</p>
+            <h4 class="date">26 октября 2022</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
- 
 </html>
