--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Отзывы Арсений Маркелов</title>
+  <title>Отзывы: Арсений Маркелов</title>
 </head>
 <body>
   <section id="reviews">
@@ -28,13 +28,41 @@
         <div class="card-body">
           <div class="author">
             <figure>
+              <img class="avatar" src="assets/avatars/alina.webp" alt="">
+            </figure>
+            <h3 class="title">Алина Суханова</h3>
+          </div>
+          <div class="text">
+            <p>Репетитор нас полностью устроил. Занимаемся мы относительно недолго, поэтому о каких-либо результатах пока говорить рано. Ребёнок заинтересованно сидит на уроке. На уроке разбираем различные задания из школьной программе, помимо этого изучаем новые программы. Заниматься планируем дальше, претензий к Арсению ни каких не имеем. Доносит информацию детям понятным для них языком. Рекомендую!</p>
+            <h4 class="date">9 января 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
               <img class="avatar" src="assets/avatars/anna.webp" alt="">
             </figure>
             <h3 class="title">Анна Фёдоровна</h3>
           </div>
           <div class="text">
-            <p>Уже год занимаемся вместе и считаем, что нам очень повезло. Мягкий, но требовательный, Арсений нашёл подход к ребёнку и умеет заинтересовать. Учитывает пожелания родителей, с нами идёт по программе и дополняет её разносторонним дедактическим материалом. Видно, что занятия тщательно спланированы, успешно подготовились с ним к введению этого предмета в школе. Хороший преподаватель.</p>
+            <p>Уже год занимаемся вместе и считаем, что нам очень повезло. Мягкий, но требовательный, нашёл подход к ребёнку и умеет заинтересовать. Учитывает пожелания родителей, с нами идёт по программе и дополняет её разносторонним дедактическим материалом. Видно, что занятия тщательно спланированы, успешно подготовились с ним к введению этого предмета в школе. Хороший преподаватель.</p>
             <h4 class="date">6 марта 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/tala.webp" alt="">
+            </figure>
+            <h3 class="title">Тала Демидова</h3>
+          </div>
+          <div class="text">
+            <p>Арсений Владимирович замечательный преподаватель! Ребёнок занимается с сентября 2021 года по настоящее время. Всё очень нравится. За время обучения ребёнок существенно расширил свой словарный запас, разобрался в грамматике и даже занял первое место в школьной олимпиаде по английскому языку!</p>
+            <h4 class="date">19 марта 2022</h4>
           </div>
         </div>
       </div>
@@ -49,6 +77,20 @@
           <div class="text">
             <p>Чудесный парень и очень грамотный специалист! Ребёнок в восторге от занятий))) Однозначно рекомендую Арсения)))</p>
             <h4 class="date">3 апреля 2022</h4>
+          </div>
+        </div>
+      </div>
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/ela.webp" alt="">
+            </figure>
+            <h3 class="title">Эля Гилязова</h3>
+          </div>
+          <div class="text">
+            <p>Замечательный педагог! Занимаемся почти год. Заметные улучшения в учёбе. Самостоятельные работы в классе у одного на 5. Грамотно построены уроки, интересные задания. Быстро нашёл подход к ребёнку. Всё отлично.</p>
+            <h4 class="date">24 апреля 2022</h4>
           </div>
         </div>
       </div>
