--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/Luka.webp" alt="">
+              <img class="avatar" src="assets/avatars/luka.webp" alt="">
             </figure>
             <h3 class="title">Лука Балашов</h3>
           </div>
