--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <h3 class="title">Татьяна Прохорова</h3>
           </div>
           <div class="text">
-            <p>Большое спасибо Арсению за подготовку, за поддержку, за его компетентность и гиперответственность. У сына оценка 5 за ОГЭ по английскому и русскому языку. Такой короткий срок, всего четыре месяца, а какие отличные результаты. Буду рекомендовать всем знакомым!</p>
+            <p>Большое спасибо Арсению за подготовку, за поддержку, за его компетентность и гиперответственность. У сына оценка 5 за ОГЭ 💪 по английскому и русскому языку. Такой короткий срок, всего четыре месяца, а какие отличные результаты. Буду рекомендовать всем знакомым!</p>
             <h4 class="date">15 мая 2022</h4>
           </div>
         </div>
