--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,7 @@
 
   <!-- Review Columns -->
   <section id="reviews">
-    <div id="contacts">
+    <div id="main">
 
       <!-- Review -->
       <div class="card contact-card flex">
