--- a/index.html
+++ b/index.html
@@ -21,19 +21,27 @@
 
   <!-- Review Columns -->
   <section id="reviews">
-    <div id="columns">
+    <div id="main">
 
       <!-- Review -->
-      <div class="card review-card">
+      <div class="card main-card">
         <div class="card-body">
-          <div class="author">
-            <figure>
-              <img class="avatar" src="assets/avatars/mariya.webp" alt="">
-            </figure>
-            <h3 class="title">Мария Егорова</h3>
-          </div>
-          <div class="text">
-            <p>Занимаюсь английским с Арсением уже около шести месяцев. До этого этот предмет вызывал у меня страх и панику. Арсений очень чётко проговаривает темы и теперь я начинаю понимать этот язык, наконец-то.</p>
+          <div class="about">
+            <div class="text">
+              <p class="one">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <strong>C1 (Advanced)</strong>, помогу:</p>
+              <ul>
+                <li>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
+                <li>Подготовиться к ВПР, ГВЭ, ЕГЭ, ОГЭ, ЦТ или иным экзаменам.</li>
+                <li>Преодолеть языковой барьер и расширить словарный запас.</li>
+                <li>Развить навыки по всем видам речевой деятельности.</li>
+                <li>Уверенно говорить и чётко выражать свои мысли.</li>
+                <li>Устранить пробелы в школьной программе, подтянуть знания.</li>
+              </ul>
+              <p class="two">Я имею пятилетний опыт обучения взрослых, подростков и детей, потому могу гарантировать хорошие показатели. Всегда работаю на результат, моя задача не «позаниматься часок», а научить пользоваться языком и понимать его. Обучающиеся у меня начинают безошибочно изъясняться и понимать изучаемый язык в путешествиях, при общении с клиентами, некоторые даже с успехом стажируются в заграничных компаниях.</p>
+              <p class="three">Ранее трудился в <a href="https://pers-school.ru/">Учебном центре «Перспектива»</a> и <a href="https://dzersch5.edumsko.ru/">МБОУ «Гимназии №5»</a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая вебинары, конференции, курсы и семинары.</p>
+              <p class="four">Использую актуальные учебники издательств <a href="https://global.oup.com/?cc=ru">Oxford</a>, <a href="https://www.cambridge.org/">Cambridge</a>, <a href="http://www.pearsonlongman.com/">Longman</a>, <a href="http://macmillan.com/">Macmillan</a> и собственные наработки. Проявляю внимание к целям и задачам учеников. Пытаюсь понять каждого, дабы выявить сильные и слабые стороны. На уроке стараюсь создавать продуктивную обстановку, предлагаю разнообразные активности, объясняю как ранее пройденный, так и новый материал.</p>
+              <p class="five">Работаю дистанционно, в приоритете использование <a href="https://discord.com/">Discord</a> — это наиболее актуальная платформа с хорошим качеством связи и минимальной задержкой, которую удобно использовать и просто настроить. Занятия этого формата так же эффективны, как очные, при этом не требуется тратить время на дорогу и можно заниматься прямо из дома, в комфортных условиях. Требуется лишь вменяемое интернет соединение и микрофон.</p>
+            </div>
           </div>
         </div>
       </div>
