--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <p class="one">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <strong>C1 (Advanced)</strong>, помогу:</p>
               <ul>
                 <li>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
-                <li>Подготовиться к ВПР, ГВЭ, ЕГЭ, ОГЭ, ЦТ или иным экзаменам.</li>
+                <li>Подготовиться к <a href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D1%80%D0%BE%D1%87%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0">ВПР</a>, <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%92%D0%AD">ГВЭ</a>, <a href="https://ru.wikipedia.org/wiki/%D0%95%D0%B4%D0%B8%D0%BD%D1%8B%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD">ЕГЭ</a>, <a href="https://ru.wikipedia.org/wiki/%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D0%BE%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD">ОГЭ</a>, <a href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5">ЦТ</a> или иным экзаменам.</li>
                 <li>Преодолеть языковой барьер и расширить словарный запас.</li>
                 <li>Развить навыки по всем видам речевой деятельности.</li>
                 <li>Уверенно говорить и чётко выражать свои мысли.</li>
