--- a/contacts.html
+++ b/contacts.html
@@ -13,8 +13,8 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
-      <li><a href="https://vesselchuck.github.io/">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
+      <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
+      <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
       <li><a href="#top">📞 КОНТАКТЫ</a></li>
     </ul>
   </nav>
@@ -36,11 +36,11 @@
             </div>
           </div>
 
-          <div class="flex">
+          <div class="flex h-card vcard">
             <div class="phone">
               <h3 class="title">📞 Телефон</h3>
               <div class="text">
-                <a href="tel:+79969760702">
+                <a class="p-tel" href="tel:+79969760702">
                   <p>+7 996 976-07-02</p>
                 </a>
               </div>
@@ -49,7 +49,7 @@
             <div>
               <h3 class="title">📧 Электронная почта</h3>
               <div class="text">
-                <a href="mail:vesselchuck.prime@gmail.com">
+                <a class="u-email" href="mailto:vesselchuck.prime@gmail.com">
                   <p>vesselchuck.prime@gmail.com</p>
                 </a>
               </div>
