--- a/contacts.html
+++ b/contacts.html
@@ -36,22 +36,18 @@
             </div>
           </div>
 
-          <div class="flex h-card vcard">
+          <div class="h-card vcard flex">
             <div class="phone">
               <h3 class="title">📞 Телефон</h3>
               <div class="text">
-                <a class="p-tel" href="tel:+79969760702">
-                  <p>+7 996 976-07-02</p>
-                </a>
+                <a class="p-tel" href="tel:+79969760702">+7 996 976-07-02</a>
               </div>
             </div>
 
             <div>
               <h3 class="title">📧 Электронная почта</h3>
               <div class="text">
-                <a class="u-email" href="mailto:vesselchuck.prime@gmail.com">
-                  <p>vesselchuck.prime@gmail.com</p>
-                </a>
+                <a class="u-email" href="mailto:vesselchuck.prime@gmail.com">vesselchuck.prime@gmail.com</a>
               </div>
             </div>
           </div>
