--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Репетитор Маркелов А.В.</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
 
@@ -14,8 +15,8 @@
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
       <li><a href="#top">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
+      <li><a href="/reviews/index.html">⭐ ОТЗЫВЫ</a></li>
+      <li><a href="/contacts/index.html">📞 КОНТАКТЫ</a></li>
     </ul>
   </nav>
 
