--- a/reviews/index.html
+++ b/reviews/index.html
@@ -14,9 +14,9 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
-      <li><a href="../index.html">🏠 ГЛАВНАЯ</a></li>
+      <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
       <li><a href="#top">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="../contacts/index.html">📞 КОНТАКТЫ</a></li>
+      <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
     </ul>
   </nav>
 
