--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
       <li><a href="#top">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
+      <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
+      <li><a href="contacts.html">📞 КОНТАКТЫ</a></li>
     </ul>
   </nav>
 
