--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="https://vesselchuck.github.io/">🏠 ГЛАВНАЯ</a></li>
       <li><a href="#top">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
+      <li><a href="https://vesselchuck.github.io/contacts/">📞 КОНТАКТЫ</a></li>
     </ul>
   </nav>
 
