--- a/contacts.html
+++ b/contacts.html
@@ -14,8 +14,8 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
-      <li><a href="https://vesselchuck.github.io/">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="https://vesselchuck.github.io/reviews/">⭐ ОТЗЫВЫ</a></li>
+      <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
+      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
       <li><a href="#top">📞 КОНТАКТЫ</a></li>
     </ul>
   </nav>
