--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,9 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
+      <!-- <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
+      <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
+      <li><a href="#top">📞 КОНТАКТЫ</a></li> -->
       <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
       <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
       <li><a href="#top">📞 КОНТАКТЫ</a></li>
@@ -31,9 +34,9 @@
         </div>
         <div class="card-body">
 
-          <div class="about">
+          <div>
             <div class="text">
-              <p>Позвоните, либо же напишите мне, если желаете получить консультацию об отдельных вопросах или назначить пробное занятие. Во время этого занятия мы познакомимся, определим уровень знаний языка, а в дальнейшем будем планировать занятия под ваши нужды.</p>
+              <p class="info">Позвоните, либо же напишите мне, если желаете получить консультацию об отдельных вопросах или назначить пробное занятие. Во время этого занятия мы познакомимся, определим уровень знаний языка, а в дальнейшем будем планировать занятия под ваши нужды.</p>
             </div>
           </div>
 
